# cli-claw

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  SUBAGENT_SYNC.md
scripts/: feishu_e2e_sim.py  feishu_webhook_payload.json
src/cli_claw/: __main__.py
src/cli_claw/bridges/acp/: __init__.py  bridge.py  stdio_client.py
src/cli_claw/bridges/base/: base.py
src/cli_claw/channels/: __init__.py  base.py  dingtalk.py  discord.py  discord_webhook.py  email.py  feishu.py  feishu_webhook.py  http_client.py  local.py  manager.py  mochat.py  policy.py  qq.py  simple_channels.py  simple_webhook.py  simple_webhook_utils.py  slack.py  slack_webhook.py  stubs.py  telegram.py  telegram_webhook.py  whatsapp.py
src/cli_claw/cli/: main.py
src/cli_claw/config/: __init__.py  loader.py  prompts.py  schema.py  shared.py
src/cli_claw/kernel/commands/: registry.py
src/cli_claw/kernel/compression/: service.py
src/cli_claw/registry/: channels.py  loader.py  providers.py
src/cli_claw/runtime/: __init__.py  channel_runtime.py  orchestrator.py
src/cli_claw/schemas/: channel.py  events.py  provider.py  transcript.py
templates/: AGENTS.md  BOOT.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
tests/: test_channel_contract.py  test_channel_manager.py  test_channel_runtime.py  test_channel_stubs.py  test_channels_mvp.py  test_cli_main.py  test_config_loader.py  test_feishu_channel_unit.py  test_feishu_webhook_integration.py  test_runtime_compression.py  test_smoke.py  test_webhook_integrations_mvp.py
(+13 files in other folders)
