[project]
name = "cli-claw"
version = "0.1.0"
description = "A provider-agnostic multi-CLI agent runtime platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.10.0",
  "loguru>=0.7.3",
  "typer>=0.12.5",
  "rich>=13.9.4",
  "httpx>=0.27.0",
  "dingtalk-stream>=0.19.0",
  "websockets>=12.0",
  "python-socketio>=5.11.0",
  "msgpack>=1.0.7",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_claw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
